@@ -218,6 +218,9 @@ API Changes
 * LUCENE-6466: Moved SpanQuery.getSpans() and .extractTerms() to SpanWeight
   (Alan Woodward)
 
+* LUCENE-6497: Allow subclasses of FieldType to check frozen state
+  (Ryan Ernst)
+
 Other
 
 * LUCENE-6413: Test runner should report the number of suites completed/ 
